feat:policy page

--- a/html/policy.html
+++ b/html/policy.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../static/css/main.css" />
     <link rel="stylesheet" href="../static/css/navbar.css">
     <link rel="stylesheet" href="../static/css/totopbtn.css" />
-    <link rel="stylesheet" href="../static/css/careers.css">
+    <link rel="stylesheet" href="../static/css/service.css">
     <script defer src="../static/js/navbar.js"></script>
     <script defer src="../static/js/totopbtn.js"></script>
 </head>
@@ -97,89 +97,78 @@
             </div>
         </div>
     </div>
-    <!-- <div class="top-gradient-color"></div> -->
-    <div class="careers-main">
-        <h1 class="careers-title">Careers</h1>
-        <div class="">
-            <div class="careers-description">
-                <h1 class="careers-subtitle">Who are we?</h1>
-                <p>We are the market leader in deriving actionable insights from customer reviews. This is not what we
-                    say; this is what our customers say about us! We are an inclusive team of diverse individuals, all
-                    driven by a single goal to “provide our customers the best and nothing but the best“.</p>
-                <p>We focus more on your passion and work ethic than your resume. If you are a person who believes in
-                    “getting things done“, we welcome you. Come join us! You can work remote, have flexible hours, enjoy
-                    ownership and independence.</p>
+    <div class="service">
+        <h1 class="service-title">Privacy Policy</h1>
+        <div class="px-3">
+            <div class="service-content">
+                <div class="service-subtitle">What information do we collect?</div>
+                <p class="service-description">We collect information from you when you register on our site or fill out
+                    a form.</p>
+                <p class="service-description">When ordering or registering on our site, as appropriate, you may be
+                    asked to enter your: name, e-mail address, mailing address, phone number or social media
+                    credentials. You may, however, visit our site anonymously.</p>
+                <p class="service-description">To improve our mobile applications and website (we continually strive to
+                    improve our website offerings based on the information and feedback we receive from you)</p>
             </div>
-            <h1 class="careers-title d-flex">Open Positions</h1>
-            <div class="careers-content">
-                <div class="positions">
-                    <div class="position-card ">
-                        <img src="../assets/careers/frontend.png" alt="">
-                        <div class="position-text">
-                            <h3>Frontend Developer</h3>
-                            <p class="experience">2+ years experience</p>
-                            <p class="position-description">We are looking for a Front-end Developer at Heystack, with
-                                3-5 years of experience and knowledge about ReactJS, material-ui and styled-components.
-                            </p>
-                            <button class="position-apply-btn">Apply →</button>
-                        </div>
-                    </div>
-                    <div class="position-card ">
-                        <img src="../assets/careers/frontend.png" alt="">
-                        <div class="position-text">
-                            <h3>Frontend Developer</h3>
-                            <p class="experience">2+ years experience</p>
-                            <p class="position-description">We are looking for a Front-end Developer at Heystack, with
-                                3-5 years of experience and knowledge about ReactJS, material-ui and styled-components.
-                            </p>
-                            <button class="position-apply-btn">Apply →</button>
-                        </div>
-                    </div>
-                    <div class="position-card ">
-                        <img src="../assets/careers/frontend.png" alt="">
-                        <div class="position-text">
-                            <h3>Frontend Developer</h3>
-                            <p class="experience">2+ years experience</p>
-                            <p class="position-description">We are looking for a Front-end Developer at Heystack, with
-                                3-5 years of experience and knowledge about ReactJS, material-ui and styled-components.
-                            </p>
-                            <button class="position-apply-btn">Apply →</button>
-                        </div>
-                    </div>
-                    <div class="position-card ">
-                        <img src="../assets/careers/frontend.png" alt="">
-                        <div class="position-text">
-                            <h3>Frontend Developer</h3>
-                            <p class="experience">2+ years experience</p>
-                            <p class="position-description">We are looking for a Front-end Developer at Heystack, with
-                                3-5 years of experience and knowledge about ReactJS, material-ui and styled-components.
-                            </p>
-                            <button class="position-apply-btn">Apply →</button>
-                        </div>
-                    </div>
-                    <div class="position-card ">
-                        <img src="../assets/careers/frontend.png" alt="">
-                        <div class="position-text">
-                            <h3>Frontend Developer</h3>
-                            <p class="experience">2+ years experience</p>
-                            <p class="position-description">We are looking for a Front-end Developer at Heystack, with
-                                3-5 years of experience and knowledge about ReactJS, material-ui and styled-components.
-                            </p>
-                            <button class="position-apply-btn">Apply →</button>
-                        </div>
-                    </div>
-                    <div class="position-card ">
-                        <img src="../assets/careers/frontend.png" alt="">
-                        <div class="position-text">
-                            <h3>Frontend Developer</h3>
-                            <p class="experience">2+ years experience</p>
-                            <p class="position-description">We are looking for a Front-end Developer at Heystack, with
-                                3-5 years of experience and knowledge about ReactJS, material-ui and styled-components.
-                            </p>
-                            <button class="position-apply-btn">Apply →</button>
-                        </div>
-                    </div>
-                </div>
+            <div class="service-content">
+                <div class="service-subtitle">What do we use your information for?</div>
+                <p class="service-description">Any of the information we collect from you may be used in one of the
+                    following ways:</p>
+                <p class="service-description">To personalize your experience (your information helps us to better
+                    respond to your individual needs)</p>
+            </div>
+            <div class="service-content">
+                <div class="service-subtitle">How do we protect your information?</div>
+                <p class="service-description">We implement a variety of security measures to maintain the safety of
+                    your personal information when you enter, submit, or access your personal information.</p>
+            </div>
+            <div class="service-content">
+                <div class="service-subtitle">Do we use cookies?</div>
+                <p class="service-description">Yes. Cookies are small files that a site or its service provider
+                    transfers to your computers hard drive through your Web browser (if you allow) that enables the
+                    sites or service providers systems to recognize your browser and capture and remember certain
+                    information.</p>
+                <p class="service-description">We use cookies to understand and save your preferences for future visits,
+                    keep track of advertisements and compile aggregate data about site traffic and site interaction so
+                    that we can offer better site experiences and tools in the future.</p>
+            </div>
+            <div class="service-content">
+                <div class="service-subtitle">Do we disclose any information to outside parties?</div>
+                <p class="service-description">We do not sell, trade, or otherwise transfer to outside parties your
+                    personally identifiable information. This does not include trusted third parties who assist us in
+                    operating our website, conducting our business, or servicing you, so long as those parties agree to
+                    keep this information confidential. We may also release your information when we believe release is
+                    appropriate to comply with the law, enforce our site policies, or protect ours or others rights,
+                    property, or safety. However, non-personally identifiable visitor information may be provided to
+                    other parties for marketing, advertising, or other uses.</p>
+            </div>
+            <div class="service-content">
+                <div class="service-subtitle">Childrens Online Privacy Protection Act Compliance</div>
+                <p class="service-description">We are in compliance with the requirements of COPPA (Childrens Online
+                    Privacy Protection Act), we do not collect any information from anyone under 13 years of age. Our
+                    website, products and services are all directed to people who are at least 13 years old or older.
+                </p>
+            </div>
+            <div class="service-content">
+                <div class="service-subtitle">Online Privacy Policy Only</div>
+                <p class="service-description">This online privacy policy applies only to information collected through
+                    our mobile applications and website and not to information collected offline.</p>
+            </div>
+            <div class="service-content">
+                <div class="service-subtitle">Terms and Conditions</div>
+                <p class="service-description">Please also visit our Terms and Conditions section establishing the use,
+                    disclaimers, and limitations of liability governing the use of our website at
+                    https://hey-stack.com/terms-conditions</p>
+            </div>
+            <div class="service-content">
+                <div class="service-subtitle">Your Consent</div>
+                <p class="service-description">By using our site, you consent to our online privacy policy. This policy
+                    was last modified on July 15, 2020</p>
+            </div>
+            <div class="service-content">
+                <div class="service-subtitle">Contacting Us</div>
+                <p class="service-description">If there are any questions regarding this privacy policy you may contact
+                    us using the information below. https://hey-stack.com</p>
             </div>
         </div>
     </div>
