--- a/html/service.html
+++ b/html/service.html
@@ -238,6 +238,52 @@
         <img class="top-arrow" src="../assets/logo/totop.svg" alt="">
         <p class="back-to-top-text">Back to Top</p>
     </button>
+    <div id="book-modal" class="book-modal">
+        <div class="book-modal-content">
+          <div class="book-modal-up">
+            <div class="ring-container">
+              <img src="./assets/logo/ring.svg" width="24" height="24" alt="">
+            </div>
+            <div class="book-modal-text">
+              <h6 class="fw-bold text-center">Book a Free Deep-Dive Session</h6>
+              <p class="px-3">
+                In this session we will understand your challenges and discuss how you could address them
+                using Heystack. In addition, we will also demostrate how some of the leading brands in your vertical are
+                using Heystack to get answers to questions like:</p>
+              <ul>
+                <li>What is the overall customer perception and who is the market leader?</li>
+                <li>What are the key purchase drivers and where do I stand among my competitors?</li>
+                <li>What are top issues or compliments that have the highest impact on my sales?</li>
+                <li>What should I do to improve product satisfaction and which SKUs should I focus on?</li>
+              </ul>
+            </div>
+          </div>
+          <form class="modal-form">
+            <div class="w-100 d-flex gap-3">
+              <div class="col">
+                <p class="m-0 fw-bold">Name</p>
+                <input class="w-100" type="text" />
+              </div>
+              <div class="col">
+                <p class="m-0 fw-bold">Email</p>
+                <input class="w-100" type="email" />
+              </div>
+            </div>
+            <div>
+              <p class="m-0 fw-bold">Subject</p>
+              <input class="w-100" type="text" />
+            </div>
+            <div>
+              <p class="m-0 fw-bold">Message</p>
+              <textarea class="w-100"></textarea>
+            </div>
+            <button type="submit">Submit</button>
+          </form>
+          <div class="cancel-container w-100">
+            <button class="book-close-button">Cancel</button>
+          </div>
+        </div>
+      </div>
 
 </body>
 
