fix: images, padding, margin

--- a/html/careers.html
+++ b/html/careers.html
@@ -26,7 +26,7 @@
 <body class="position-relative">
     <div class="navbar top-0 start-0">
         <div class="navbar-container">
-            <a href="index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
+            <a href="../index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
                 <img class="logo-img" src="../assets/logo/logo.ico" alt="" />
                 <span class="">Heystack</span>
             </a>
@@ -149,7 +149,7 @@
                         </div>
                     </div>
                     <div class="position-card ">
-                        <img src="../assets/careers/frontend.png" alt="">
+                        <img src="../assets/careers/nlp.png" alt="">
                         <div class="position-text">
                             <h3>Frontend Developer</h3>
                             <p class="experience">2+ years experience</p>
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                     <div class="position-card ">
-                        <img src="../assets/careers/frontend.png" alt="">
+                        <img src="../assets/careers/associate.png" alt="">
                         <div class="position-text">
                             <h3>Frontend Developer</h3>
                             <p class="experience">2+ years experience</p>
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                     <div class="position-card ">
-                        <img src="../assets/careers/frontend.png" alt="">
+                        <img src="../assets/careers/sales.png" alt="">
                         <div class="position-text">
                             <h3>Frontend Developer</h3>
                             <p class="experience">2+ years experience</p>
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                     <div class="position-card ">
-                        <img src="../assets/careers/frontend.png" alt="">
+                        <img src="../assets/careers/scientist.png" alt="">
                         <div class="position-text">
                             <h3>Frontend Developer</h3>
                             <p class="experience">2+ years experience</p>
@@ -193,7 +193,7 @@
                         </div>
                     </div>
                     <div class="position-card ">
-                        <img src="../assets/careers/frontend.png" alt="">
+                        <img src="../assets/careers/backend.png" alt="">
                         <div class="position-text">
                             <h3>Frontend Developer</h3>
                             <p class="experience">2+ years experience</p>
