--- a/html/minimize_returns.html
+++ b/html/minimize_returns.html
@@ -24,7 +24,7 @@
 <body class="position-relative">
     <div class="navbar top-0 start-0">
         <div class="navbar-container">
-            <a href="index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
+            <a href="../index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
                 <img class="logo-img" src="../assets/logo/logo.ico" alt="" />
                 <span class="">Heystack</span>
             </a>
