--- a/html/blog.html
+++ b/html/blog.html
@@ -28,7 +28,7 @@
 <body class="position-relative" style=" font-family: Poppins, sans-serif;">
   <div class="navbar top-0 start-0">
     <div class="navbar-container">
-      <a href="index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
+      <a href="../index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
         <img class="logo-img" src="../assets/logo/logo.ico" alt="" />
         <span class="">Heystack</span>
       </a>
@@ -312,7 +312,7 @@
     </div>
   </div>
 
-  <div class="margintop-112 padding-24">
+  <div class="margintop-112 padding-24 ">
     <div class="footer-container padding-80">
       <div class="d-flex flex-column gap-3 font-14">
         <div class="logo d-flex align-items-center gap-2">
@@ -321,20 +321,13 @@
             <span class="font-20">Heystack</span>
           </div>
         </div>
-        <p class="m-0">
-          The Green #8138 <br />
-          Dover, DE 19901
-        </p>
+        <p class="m-0">The Green #8138 <br /> Dover, DE 19901</p>
         <a href="https://www.linkedin.com/company/hey-stack/">
-          <img class="linkedin" src="../assets/footer/linkedin.ico" alt="" />
+          <img class="linkedin" src="../assets/footer/linkedin.ico" alt="">
         </a>
         <div class="contact-info mb-4">
-          <p class="m-0">
-            <a href="tel:+13022120040">Phone: +1 (302) 212-0040</a>
-          </p>
-          <p class="m-0">
-            <a href="contact@hey-stack.com">Email: contact@hey-stack.com</a>
-          </p>
+          <p class="m-0"><a href="tel:+13022120040">Phone: +1 (302) 212-0040</a></p>
+          <p class="m-0"><a href="contact@hey-stack.com">Email: contact@hey-stack.com</a></p>
         </div>
       </div>
       <div class="d-flex flex-wrap gap-5rem">
@@ -350,9 +343,9 @@
           <div class="footer-links">
             <p class="fw-bold">Resourse</p>
             <a class="mt-0 mb-0" href="../html/blog.html">Blogs</a>
-            <a class="mt-3 mb-0" href="#career">Career</a>
-            <a class="mt-3 mb-0" href="#team-conditions">Teams of Service</a>
-            <a class="mt-3 mb-0" href="#privacy-policy">Privacy Policy</a>
+            <a class="mt-3 mb-0" href="../html/careers.html">Career</a>
+            <a class="mt-3 mb-0" href="../html/service.html">Teams of Service</a>
+            <a class="mt-3 mb-0" href="../html/policy.html">Privacy Policy</a>
           </div>
         </div>
         <div class="d-flex flex-wrap gap-5rem">
@@ -365,15 +358,13 @@
           </div>
         </div>
         <div class="location d-flex p-2 rounded-3">
-          <img class="w-100" src="../assets/footer/location.png" alt="" />
+          <img class="w-100" src="../assets/footer/location.png" alt="">
         </div>
       </div>
     </div>
-    <p class="copy-right text-center p-2 m-0">
-      © 2024
-      <a class="copy-right-link" href="https://hey-stack.com">Heystack™</a>.
-      All Rights Reserved.
-    </p>
+    <p class="copy-right text-center p-2 m-0">© 2024 <a class="copy-right-link"
+        href="https://hey-stack.com">Heystack™</a>. All Rights
+      Reserved.</p>
   </div>
   <button id="backToTopBtn" class="back-to-top-btn">
     <img class="top-arrow" src="../assets/logo/totop.svg" alt="" />
