fix: job description

--- a/html/careers.html
+++ b/html/careers.html
@@ -151,10 +151,11 @@
                     <div class="position-card ">
                         <img src="../assets/careers/nlp.png" alt="">
                         <div class="position-text">
-                            <h3>Frontend Developer</h3>
+                            <h3>NLP Associate</h3>
                             <p class="experience">2+ years experience</p>
-                            <p class="position-description">We are looking for a Front-end Developer at Heystack, with
-                                3-5 years of experience and knowledge about ReactJS, material-ui and styled-components.
+                            <p class="position-description">We're hiring multiple NLP Associates to be part of the
+                                Heystack team. A strong background in Computational Linguistics and/or Customer Service
+                                is highly desirable.
                             </p>
                             <button class="position-apply-btn">Apply →</button>
                         </div>
@@ -162,10 +163,10 @@
                     <div class="position-card ">
                         <img src="../assets/careers/associate.png" alt="">
                         <div class="position-text">
-                            <h3>Frontend Developer</h3>
-                            <p class="experience">2+ years experience</p>
-                            <p class="position-description">We are looking for a Front-end Developer at Heystack, with
-                                3-5 years of experience and knowledge about ReactJS, material-ui and styled-components.
+                            <h3>Account Executive</h3>
+                            <p class="experience">3-5 years experience</p>
+                            <p class="position-description">We are now hiring a talented Account Executive professional,
+                                with 3-5 years of experience, to join our team.
                             </p>
                             <button class="position-apply-btn">Apply →</button>
                         </div>
@@ -173,10 +174,10 @@
                     <div class="position-card ">
                         <img src="../assets/careers/sales.png" alt="">
                         <div class="position-text">
-                            <h3>Frontend Developer</h3>
-                            <p class="experience">2+ years experience</p>
-                            <p class="position-description">We are looking for a Front-end Developer at Heystack, with
-                                3-5 years of experience and knowledge about ReactJS, material-ui and styled-components.
+                            <h3>Sales Development Representative</h3>
+                            <p class="experience">3-5 years experience</p>
+                            <p class="position-description">We are looking for an experienced SDR, with 3-5 years of
+                                experience, to join our sales team.
                             </p>
                             <button class="position-apply-btn">Apply →</button>
                         </div>
@@ -184,10 +185,10 @@
                     <div class="position-card ">
                         <img src="../assets/careers/scientist.png" alt="">
                         <div class="position-text">
-                            <h3>Frontend Developer</h3>
-                            <p class="experience">2+ years experience</p>
-                            <p class="position-description">We are looking for a Front-end Developer at Heystack, with
-                                3-5 years of experience and knowledge about ReactJS, material-ui and styled-components.
+                            <h3>NLP Scientist</h3>
+                            <p class="experience">3+ years</p>
+                            <p class="position-description">We're hiring an NLP Scientist, with a PhD in ML/NLP and 3+
+                                years of research experience in deep learning, to join our NLP research team.
                             </p>
                             <button class="position-apply-btn">Apply →</button>
                         </div>
@@ -196,9 +197,10 @@
                         <img src="../assets/careers/backend.png" alt="">
                         <div class="position-text">
                             <h3>Frontend Developer</h3>
-                            <p class="experience">2+ years experience</p>
-                            <p class="position-description">We are looking for a Front-end Developer at Heystack, with
-                                3-5 years of experience and knowledge about ReactJS, material-ui and styled-components.
+                            <p class="experience">3-5 years experience</p>
+                            <p class="position-description">We are looking for a Back-end Engineer, with 3-5 years of
+                                experience in LAMP stack and scalable server design, to join our engineering team at
+                                Heystack.
                             </p>
                             <button class="position-apply-btn">Apply →</button>
                         </div>
