feat:apply-modal

--- a/html/blog.html
+++ b/html/blog.html
@@ -79,7 +79,7 @@
       <div class="book-modal-content">
         <div class="book-modal-up">
           <div class="ring-container">
-            <img src="./assets/logo/ring.svg" width="24" height="24" alt="">
+            <img src="../assets/logo/ring.svg" width="24" height="24" alt="">
           </div>
           <div class="book-modal-text">
             <h6 class="fw-bold text-center">Book a Free Deep-Dive Session</h6>
