style: testimonial padding

--- a/index.html
+++ b/index.html
@@ -395,11 +395,11 @@
     </div>
   </div>
   <div class="testimonials" id="testimonials">
-    <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto">
+    <div class="max-width-1280 paddingy-64 px-3 px-md-4 mx-auto">
       <p class="title-gradient m-0">
         Testimonials
       </p>
-      <p class="text-center font-24 pt-1 m-0">What peoaple say about us</p>
+      <p class="text-center font-24 pt-1 m-0">What people say about us</p>
       <div class="slide-container swiper position-relative">
         <div class="slide-content">
           <div class="card-wrapper swiper-wrapper">
@@ -541,7 +541,7 @@
   </div>
   <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto" id="retailers">
     <p class="title-gradient m-0">
-      Retail Partners?
+      Retail Partners
     </p>
     <div class="position-relative swiper-container swiper mt-5">
       <div class="retailers-content">
