--- a/html/service.html
+++ b/html/service.html
@@ -229,7 +229,7 @@
                         <a class="mt-0 mb-0" href="../index.html#customers">Customers</a>
                         <a class="mt-3 mb-0" href="../index.html#products">Products</a>
                         <a class="mt-3 mb-0" href="../index.html#testimonials">Testimonials</a>
-                        <a class="mt-3 mb-0" href="../index.html#technology">Features</a>
+                        <a class="mt-3 mb-0" href="../index.html#technology">Technology</a>
                         <a class="mt-3 mb-0" href="../index.html#retailers">Retail Partners</a>
                     </div>
                     <div class="footer-links">
