--- a/html/careers.html
+++ b/html/careers.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/main.css" />
     <link rel="stylesheet" href="../static/css/navbar.css">
@@ -22,7 +23,9 @@
     <script defer src="../static/js/navbar.js"></script>
     <script defer src="../static/js/totopbtn.js"></script>
     <script defer src="../static/js/book-modal.js"></script>
+    <script defer src="../static/js/book-email.js"></script>
     <script defer src="../static/js/apply-modal.js"></script>
+
 </head>
 
 <body class="position-relative">
@@ -97,24 +100,24 @@
                         </ul>
                     </div>
                 </div>
-                <form class="modal-form">
+                <form class="modal-form" id="book-email-form">
                     <div class="w-100 d-flex gap-3">
                         <div class="col">
-                            <p class="m-0 fw-bold">Name</p>
-                            <input class="w-100" type="text" />
+                            <label class="m-0 fw-bold">Name</label>
+                            <input class="w-100" type="text" id="book-name" required />
                         </div>
                         <div class="col">
-                            <p class="m-0 fw-bold">Email</p>
-                            <input class="w-100" type="email" />
+                            <label class="m-0 fw-bold">Email</label>
+                            <input class="w-100" type="email" id="book-email" required />
                         </div>
                     </div>
                     <div>
-                        <p class="m-0 fw-bold">Subject</p>
-                        <input class="w-100" type="text" />
+                        <label class="m-0 fw-bold">Subject</label>
+                        <input class="w-100" type="text" id="book-subject" required />
                     </div>
                     <div>
-                        <p class="m-0 fw-bold">Message</p>
-                        <textarea class="w-100"></textarea>
+                        <label class="m-0 fw-bold">Message</label>
+                        <textarea class="w-100" id="book-message" required></textarea>
                     </div>
                     <button type="submit">Submit</button>
                 </form>
@@ -147,7 +150,7 @@
                             <p class="position-description">We are looking for a Front-end Developer at Heystack, with
                                 3-5 years of experience and knowledge about ReactJS, material-ui and styled-components.
                             </p>
-                            <button class="position-apply-btn open-apply" >Apply →</button>
+                            <button class="position-apply-btn open-apply">Apply →</button>
                         </div>
                     </div>
                     <div class="position-card ">
@@ -159,7 +162,7 @@
                                 Heystack team. A strong background in Computational Linguistics and/or Customer Service
                                 is highly desirable.
                             </p>
-                            <button class="position-apply-btn open-apply" >Apply →</button>
+                            <button class="position-apply-btn open-apply">Apply →</button>
                         </div>
                     </div>
                     <div class="position-card ">
@@ -170,7 +173,7 @@
                             <p class="position-description">We are now hiring a talented Account Executive professional,
                                 with 3-5 years of experience, to join our team.
                             </p>
-                            <button class="position-apply-btn open-apply" >Apply →</button>
+                            <button class="position-apply-btn open-apply">Apply →</button>
                         </div>
                     </div>
                     <div class="position-card ">
@@ -181,7 +184,7 @@
                             <p class="position-description">We are looking for an experienced SDR, with 3-5 years of
                                 experience, to join our sales team.
                             </p>
-                            <button class="position-apply-btn open-apply" >Apply →</button>
+                            <button class="position-apply-btn open-apply">Apply →</button>
                         </div>
                     </div>
                     <div class="position-card ">
@@ -192,7 +195,7 @@
                             <p class="position-description">We're hiring an NLP Scientist, with a PhD in ML/NLP and 3+
                                 years of research experience in deep learning, to join our NLP research team.
                             </p>
-                            <button class="position-apply-btn open-apply" >Apply →</button>
+                            <button class="position-apply-btn open-apply">Apply →</button>
                         </div>
                     </div>
                     <div class="position-card ">
@@ -204,7 +207,7 @@
                                 experience in LAMP stack and scalable server design, to join our engineering team at
                                 Heystack.
                             </p>
-                            <button class="position-apply-btn open-apply" >Apply →</button>
+                            <button class="position-apply-btn open-apply">Apply →</button>
                         </div>
                     </div>
                 </div>
@@ -220,40 +223,40 @@
                         <h6 class="fw-bold text-center">Apply for the open Position</h6>
                     </div>
                 </div>
-                <form class="modal-form">
+                <form class="apply-modal-form p-4" id="apply-email-form">
                     <div class="w-100 d-flex flex-column flex-md-row gap-3">
                         <div class="col">
-                            <p class="m-0 fw-bold">Name</p>
-                            <input class="w-100" type="text" />
+                            <label class="m-0 fw-bold">Name</label>
+                            <input class="w-100" type="text" id="apply-name" required />
                         </div>
                         <div class="col">
-                            <p class="m-0 fw-bold">Email</p>
-                            <input class="w-100" type="email" />
+                            <label class="m-0 fw-bold">Email</label>
+                            <input class="w-100" type="email" id="apply-email" required />
                         </div>
                     </div>
                     <div class="w-100 d-flex flex-column flex-md-row gap-3">
                         <div class="col">
-                            <p class="m-0 fw-bold">Phone</p>
-                            <input class="w-100" type="text" />
+                            <label class="m-0 fw-bold">Phone</label>
+                            <input class="w-100" type="text" id="apply-phone" required />
                         </div>
                         <div class="col">
-                            <p class="m-0 fw-bold">Role</p>
-                            <input class="w-100" type="email" />
+                            <label class="m-0 fw-bold">Role</label>
+                            <input class="w-100" type="text" id="apply-role" required />
                         </div>
                     </div>
                     <div class="w-100 d-flex flex-column flex-md-row gap-3">
                         <div class="col">
-                            <p class="m-0 fw-bold">Location</p>
-                            <input class="w-100" type="text" />
+                            <label class="m-0 fw-bold">Location</label>
+                            <input class="w-100" type="text" id="apply-location" required />
                         </div>
                         <div class="col">
-                            <p class="m-0 fw-bold">Linkedin</p>
-                            <input class="w-100" type="email" />
+                            <label class="m-0 fw-bold">Linkedin</label>
+                            <input class="w-100" type="text" id="apply-linkedin" required />
                         </div>
                     </div>
                     <div>
-                        <p class="m-0 fw-bold">Message</p>
-                        <textarea class="w-100"></textarea>
+                        <label class="m-0 fw-bold">Message</label>
+                        <textarea class="w-100" id="apply-message" required></textarea>
                     </div>
                     <button type="submit">Submit</button>
                 </form>
@@ -321,7 +324,36 @@
         <img class="top-arrow" src="../assets/logo/totop.svg" alt="">
         <p class="back-to-top-text">Back to Top</p>
     </button>
-
 </body>
+<script type="text/javascript">
+    (function () {
+        emailjs.init("AxfWH57xCUpbKEHPO");
+    })();
+
+    document.getElementById('apply-email-form').addEventListener('submit', function (event) {
+        event.preventDefault();
+
+        const templateParams = {
+            to: 'saveearthdev@gmail.com',
+            subject: "Apply",
+            name: document.getElementById('apply-name').value,
+            email: document.getElementById('apply-email').value,
+            phone: document.getElementById('apply-phone').value,
+            role: document.getElementById('apply-role').value,
+            location: document.getElementById('apply-location').value,
+            linkedin: document.getElementById('apply-linkedin').value,
+            message: document.getElementById('apply-message').value,
+        };
+
+        emailjs.send('service_l3gukc9', 'template_nrx60j6', templateParams)
+            .then(function (response) {
+                console.log('SUCCESS!', response.status, response.text);
+                alert('Email sent successfully!');
+            }, function (error) {
+                console.log('FAILED...', error);
+                alert('Email sending failed. Please try again later.');
+            });
+    });
+</script>
 
 </html>
