--- a/html/minimize_returns.html
+++ b/html/minimize_returns.html
@@ -12,13 +12,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script defer src="../static/js/book-email.js"></script>
+    <script defer src="../static/js/navbar.js"></script>
+    <script defer src="../static/js/totopbtn.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/main.css" />
     <link rel="stylesheet" href="../static/css/navbar.css">
     <link rel="stylesheet" href="../static/css/totopbtn.css" />
     <link rel="stylesheet" href="../static/css/minimize_returns.css">
-    <script defer src="../static/js/navbar.js"></script>
-    <script defer src="../static/js/totopbtn.js"></script>
 </head>
 
 <body class="position-relative">
