--- a/html/slug.html
+++ b/html/slug.html
@@ -11,8 +11,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="../static/css/main.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script defer src="../static/js/book-email.js"></script>
+  <script defer src="../static/js/main.js"></script>
+  <link rel="stylesheet" href="../static/css/main.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="../static/css/testimonials.css" />
   <link rel="stylesheet" href="../static/css/partners.css" />
@@ -20,8 +24,6 @@
   <link rel="stylesheet" href="../static/css/totopbtn.css" />
   <link rel="stylesheet" href="../static/css/book-modal.css" />
   <link rel="stylesheet" href="../static/css/slug.css" />
-  <script defer src="../static/js/main.js"></script>
-  <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 
 <body class="position-relative">
@@ -151,7 +153,7 @@
       </div>
     </div>
   </div>
-    <!-- <div id="book-modal" class="book-modal">
+  <!-- <div id="book-modal" class="book-modal">
       <div class="book-modal-content">
         <div class="book-modal-up">
           <div class="ring-container">
