--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script defer src="./static/js/testimonials.js"></script>
+  <script defer src="./static/js/retailers.js"></script>
+  <script defer src="./static/js/navbar.js"></script>
+  <script defer src="./static/js/totopbtn.js"></script>
+  <script defer src="./static/js/book-modal.js"></script>
+  <script defer src="./static/js/book-email.js"></script>
   <link rel="stylesheet" href="./static/css/main.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <link rel="stylesheet" href="./static/css/testimonials.css">
@@ -20,12 +28,6 @@
   <link rel="stylesheet" href="./static/css/navbar.css">
   <link rel="stylesheet" href="./static/css/totopbtn.css" />
   <link rel="stylesheet" href="./static/css/book-modal.css" />
-  <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script defer src="./static/js/testimonials.js"></script>
-  <script defer src="./static/js/retailers.js"></script>
-  <script defer src="./static/js/navbar.js"></script>
-  <script defer src="./static/js/totopbtn.js"></script>
-  <script defer src="./static/js/book-modal.js"></script>
 </head>
 
 <body class="position-relative">
@@ -98,24 +100,24 @@
             </ul>
           </div>
         </div>
-        <form class="modal-form">
+        <form class="modal-form" id="book-email-form">
           <div class="w-100 d-flex gap-3">
             <div class="col">
-              <p class="m-0 fw-bold">Name</p>
-              <input class="w-100" type="text" />
+              <label class="m-0 fw-bold">Name</label>
+              <input class="w-100" type="text" id="book-name" required />
             </div>
             <div class="col">
-              <p class="m-0 fw-bold">Email</p>
-              <input class="w-100" type="email" />
+              <label class="m-0 fw-bold">Email</label>
+              <input class="w-100" type="email" id="book-email" required />
             </div>
           </div>
           <div>
-            <p class="m-0 fw-bold">Subject</p>
-            <input class="w-100" type="text" />
+            <label class="m-0 fw-bold">Subject</label>
+            <input class="w-100" type="text" id="book-subject" required />
           </div>
           <div>
-            <p class="m-0 fw-bold">Message</p>
-            <textarea class="w-100"></textarea>
+            <label class="m-0 fw-bold">Message</label>
+            <textarea class="w-100" id="book-message" required></textarea>
           </div>
           <button type="submit">Submit</button>
         </form>
